--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bourbon-neat": "~1.9",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "html5shiv": "^3.7.3",
