--- a/setup.cfg
+++ b/setup.cfg
@@ -8,17 +8,17 @@ serialize =
 	{major}.{minor}.{patch}
 
 [metadata]
-name = sphinx_rtd_theme
-url = https://github.com/readthedocs/sphinx_rtd_theme
+name = sphinx_rtd_theme_cilium
+url = https://github.com/cilium/sphinx_rtd_theme
 license = MIT
 author = Dave Snider, Read the Docs, Inc. & contributors
 author_email = dev@readthedocs.org
-description = Read the Docs theme for Sphinx
+description = Read the Docs theme for Sphinx - Costumized for Cilium
 long_description = file: README.rst
 project_urls = 
 	Homepage = https://sphinx-rtd-theme.readthedocs.io/
-	Source Code = https://github.com/readthedocs/sphinx_rtd_theme
-	Issue Tracker = https://github.com/readthedocs/sphinx_rtd_theme/issues
+	Source Code = https://github.com/cilium/sphinx_rtd_theme
+	Issue Tracker = https://github.com/cilium/sphinx_rtd_theme/issues
 classifiers = 
 	Framework :: Sphinx
 	Framework :: Sphinx :: Theme
@@ -60,7 +60,7 @@ dev =
 
 [options.entry_points]
 sphinx.html_themes = 
-	sphinx_rtd_theme = sphinx_rtd_theme
+	sphinx_rtd_theme_cilium = sphinx_rtd_theme
 
 [options.package_data]
 sphinx_rtd_theme = 
