--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sphinx_rtd_theme",
+  "name": "sphinx_rtd_theme_cilium",
   "main": "js/theme.js",
   "version": "2.0.0rc3",
   "scripts": {
