--- a/sphinx_rtd_theme/theme.conf
+++ b/sphinx_rtd_theme/theme.conf
@@ -12,7 +12,7 @@ sticky_navigation = True
 navigation_depth = 4
 includehidden = True
 titles_only =
-logo_only =
+logo_only = True
 display_version = True
 prev_next_buttons_location = bottom
 style_external_links = False
